[package]
name = "haxrs"
version = "0.2.0"
edition = "2021"
authors = ["skyline <efedasguney@protonmail.com>"]
license-file = "LICENSE"
description = "Hax is a mini-tool with really useful hacking tools."
repository = "https://github.com/skyline69/HaxRS"
readme = "README.md"
homepage = "https://skyline69.live"
categories = ["hacking", "tools", "cli"]
keywords = ["hacking", "tools", "cli"]
publish = false

[dependencies]
chrono = "0.4.24"
clearscreen = { version = "2.0.1", features = ["windows-console"] }
colored = "2.0.0"
crossterm = "0.26.1"
dirs = "5.0.1"
log = "0.4.17"
log4rs = "1.2.0"
ping = "0.4.1"
reqwest = { version = "0.11.17", features = ["json", "blocking"]}
semver = "1.0.17"
serde_json = "1.0.96"
socket2 = "0.5.2"
sysinfo = "0.29.0"
tokio = { version =  "1.28.0", features = ["full"] }
url = "2.3.1"
flate2 = "1.0.26"
zip = "0.6.5"
async-recursion = "1.0.4"
rayon = "1.7.0"

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"
tar = "0.4.38"

[target.'cfg(linux)'.dependencies]
procfs = "0.15.1"

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
debug = false
