[package]
name = "haxrs"
version = "0.2.0"
edition = "2021"
authors = ["skyline <efedasguney@protonmail.com>"]
license-file = "LICENSE"
description = "Hax is a mini-tool with really useful hacking tools."
repository = "https://github.com/skyline69/HaxRS"
readme = "README.md"
homepage = "https://skyline69.github.io"
categories = ["hacking", "tools", "cli"]
keywords = ["hacking", "tools", "cli"]
publish = false

[dependencies]
chrono = "0.4.31"
clearscreen = { version = "2.0.1", features = ["windows-console"] }
colored = "2.1.0"
crossterm = "0.26.1"
dirs = "5.0.1"
log = "0.4.20"
log4rs = "1.2.0"
ping = "0.4.1"
reqwest = { version = "0.11.22", features = ["json", "blocking"]} # default-features = false <- Sometimes it gives an error, so I commented it.
semver = "1.0.20"
serde_json = "1.0.108"
socket2 = "0.5.5"
sysinfo = "0.29.11"
tokio = { version =  "1.35.0", features = ["full"] }
url = "2.5.0"
zip = "0.6.6"
ctrlc = "3.4.1"
zphisher = { path = "src/behind/zphisher" , version = "0.1.0" }



[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = true
panic = "abort"
lto = true
debug = false
strip = true
