[package]
name = "zphisher"
version = "0.1.0"
edition = "2021"
keywords = ["zphisher", "phishing", "phisher", "phishing tool", "phishing tool for termux", "phishing tool for linux", "phishing tool for windows", "phishing tool for android", "phishing tool for macos", "phishing tool for ios"]
categories = ["phishing", "phisher", "phishing tool"]
homepage = "https://skyline69.live"
description= "A better ZPhisher version."
publish = false


[lib]
name = "zphisher"
path = "src/lib.rs"


[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.17", features = ["json", "blocking"]} # default-features = false <- Sometimes it gives an error, so I commented it.
zip = "0.6.5"
regex = "1.8.4"
rayon = "1.7.0"
url = "2.3.1"
log = "0.4.17"
log4rs = "1.2.0"
clearscreen = { version = "2.0.1", features = ["windows-console"] }
dirs = "5.0.1"
sysinfo = "0.29.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-cors = "0.6.4"
flate2 = "1.0.26"
serde = "1.0.164"
futures = "0.3.28"
tokio = {version = "1.28.2", features = ["full"]}

[target.'cfg(unix)'.dependencies]
procfs = "0.15.1"
nix = "0.26.2"
tar = "0.4.38"
