[package]
name = "zphisher"
version = "0.1.0"
edition = "2021"
keywords = ["zphisher", "phishing", "phisher", "phishing tool", "phishing tool for termux", "phishing tool for linux", "phishing tool for windows", "phishing tool for android", "phishing tool for macos", "phishing tool for ios"]
categories = ["phishing", "phisher", "phishing tool"]
homepage = "https://skyline69.live"
description= "A better ZPhisher version."
publish = false


[lib]
name = "zphisher"
path = "src/lib.rs"


[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.18", features = ["json", "blocking", "cookies"]}
zip = "0.6.5"
regex = "1.8.4"
url = "2.3.1"
log = "0.4.17"
log4rs = "1.2.0"
clearscreen = { version = "2.0.1", features = ["windows-console"] }
dirs = "5.0.1"
sysinfo = "0.29.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-cors = "0.6.4"
flate2 = "1.0.26"
serde = "1.0.164"
tokio = {version = "1.28.2", features = ["full"]}
crossterm = "0.26.1"

[target.'cfg(unix)'.dependencies]
procfs = "0.15.1"
nix = "0.26.2"
tar = "0.4.38"


[profile.release]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = true
panic = "abort"
lto = true
debug = false
strip = true
