[package]
name = "zphisher"
version = "0.1.0"
edition = "2021"
keywords = ["zphisher", "phishing", "phisher", "phishing_tool", "macos"]
categories = ["phishing", "phisher", "phishing tool"]
homepage = "https://skyline69.live"
description= "A better ZPhisher version."
publish = false


[lib]
name = "zphisher"
path = "src/lib.rs"


[dependencies]
colored = "2.0.4"
reqwest = { version = "0.11.22", features = ["json", "blocking", "cookies"]}
zip = "0.6.6"
regex = "1.10.2"
url = "2.5.0"
log = "0.4.20"
log4rs = "1.2.0"
clearscreen = { version = "2.0.1", features = ["windows-console"] }
dirs = "5.0.1"
sysinfo = "0.29.11"
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-cors = "0.6.5"
flate2 = "1.0.28"
serde = "1.0.193"
tokio = {version = "1.34.0", features = ["full"]}
crossterm = "0.26.1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15.1"
nix = "0.26.4"
tar = "0.4.40"


[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = "0.29.11"
tar = "0.4.40"


[profile.release]
opt-level = 3
codegen-units = 1
debug-assertions = false
overflow-checks = true
panic = "abort"
lto = true
debug = false
strip = true
